q/c/submissions/teamalpha/error-output.txt
submissions/teamalpha/problem2.cpp: In function 'int main()':
submissions/teamalpha/problem2.cpp:26:20: error: 'strlen' was not declared in this scope
        s=strlen(arr);
                    ^
